--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,6 +22,7 @@ $cont-small:(
     padding: 0%;
     box-sizing: border-box;
 }
+
 $background-color-1:#d479e9;
 $font-color-1:#370263;
 $font-color-2: #2c0936;
@@ -34,22 +35,10 @@ body {
     background-image: linear-gradient(58deg, #d479e9 0%, #d4e6e6 46%, #eb7fd2 100%);
 }
 
-.contenedor-mision{
-    display:grid;
-    grid-template-columns: 1fr  1fr;
-    grid-template-rows: 50vh    12vh    80vh    15vh;
-    background-color:$background-color-1;
-    grid-template-areas: 
-    "header header"
-    "section    section"
-    "main   aside"
-    "footer footer";
-}
-
 .contenedor-index{
     display:grid;
     grid-template-columns: 1fr  1fr;
-    grid-template-rows: 50vh    12vh    130vh    15vh;
+    grid-template-rows: 50vh    12vh    140vh    15vh;
     background-color:$background-color-1;
     grid-template-areas: 
     "header header"
@@ -58,13 +47,83 @@ body {
     "footer footer";
 }
 
+.contenedor-mision{
+    display:grid;
+    grid-template-columns: 1fr  1fr;
+    grid-template-rows: 50vh    12vh    100vh    15vh;
+    background-color:$background-color-1;
+    grid-template-areas: 
+    "header header"
+    "section    section"
+    "main   aside"
+    "footer footer";
+}
+
+.contenedor-adoptar{
+    display:grid;
+    grid-template-columns: 1fr  1fr;
+    grid-template-rows: 50vh    12vh    70vh    15vh;
+    flex-wrap: wrap;
+    grid-template-areas: 
+    "header header"
+    "section    section"
+    "main   main"
+    "footer footer";
+}
+
+.contenedor-transitar{
+    display:grid;
+    grid-template-columns: 1fr  1fr;
+    grid-template-rows: 50vh    10vh    50vh    15vh;
+    grid-template-areas: 
+    "header header"
+    "section    section"
+    "main   main"
+    "footer footer";
+}
+
+.contenedor-publicar{
+    display:grid;
+    grid-template-columns: 1fr  1fr;
+    grid-template-rows: 50vh    10vh    90vh    30vh;
+    flex-wrap: wrap;
+    grid-template-areas: 
+    "header header"
+    "section    section"
+    "main   main"
+    "footer footer";
+}
+
+.contenedor-seccion2{
+        display:grid;
+        grid-template-columns: 1fr  1fr;
+        grid-template-rows: 50vh    12vh    50vh    15vh;
+        flex-wrap: wrap;
+        grid-template-areas: 
+        "header header"
+        "section    section"
+        "main   main"
+        "footer footer";
+    }
+
+.mision-caja-chica {
+    display: map-get($cont-small, display);
+    display:inline;
+    flex-direction:row;
+    flex-wrap: wrap;
+    padding: 50px;
+    font-size: 15px;
+    text-align: justify;
+    @extend %alienacion;
+} 
+
 header{
     grid-area: header;
-    background-image: linear-gradient(58deg, #d479e9 0%, #d4e6e6 46%, #eb7fd2 100%);
-    background-size: contain;
+    background-image: url(../images/imagenheader.jpg);
+    background-size: contain!important;
+    background-repeat: repeat-x;
     padding: 10px;
         a{  list-style: none;
-    font-weight:bold;
     text-decoration: none;
     transition:all 1s;
     color:$font-color-1;
@@ -72,6 +131,8 @@ header{
         a:hover {
     color: $font-color-2;
     font-size: 20px;
+    background-color: #eaa9f8;
+    border-radius: 30%;
     }
         img {
     @include tamaños(15%,15%); 
@@ -85,11 +146,12 @@ header{
 }  
 header  .li-nav {
     display: inline;
-    padding: 15px;
+    padding: 15px;  
+    font-weight:bolder;
 }
 header  ul {
     list-style: none;
-    text-align: center;     
+    text-align: center;    
 } 
 
 .ingresar {
@@ -140,60 +202,13 @@ aside{
 }
 }
 
-.mision-caja-chica {
-    display: map-get($cont-small, display);
-    display:inline;
-    flex-direction:row;
-    flex-wrap: wrap;
-    padding: 40px;
-    font-size: 15px;
-    text-align: justify;
-    @extend %alienacion;
-} 
-
 footer{
     grid-area: footer;
+    background-image: url(../images/imagenheader.jpg);
     background-size: contain;
     background-repeat:repeat;
     padding: 10px;
-    background-image: linear-gradient(58deg, #d479e9 0%, #d4e6e6 46%, #eb7fd2 100%);
 }
-
-.contenedor-adoptar{
-    display:grid;
-    grid-template-columns: 1fr  1fr;
-    grid-template-rows: 50vh    12vh    70vh    15vh;
-    flex-wrap: wrap;
-    grid-template-areas: 
-    "header header"
-    "section    section"
-    "main   main"
-    "footer footer";
-}
-
-.contenedor-publicar{
-    display:grid;
-    grid-template-columns: 1fr  1fr;
-    grid-template-rows: 50vh    10vh    100vh    30vh;
-    flex-wrap: wrap;
-    grid-template-areas: 
-    "header header"
-    "section    section"
-    "main   main"
-    "footer footer";
-}
-
-.contenedor-seccion2{
-        display:grid;
-        grid-template-columns: 1fr  1fr;
-        grid-template-rows: 50vh    12vh    50vh    15vh;
-        flex-wrap: wrap;
-        grid-template-areas: 
-        "header header"
-        "section    section"
-        "main   main"
-        "footer footer";
-    }
 
 .adoptar{
     font-size: 40px;
@@ -229,24 +244,20 @@ h2{
     text-align: center;
     font-size: 15px;
     padding: 4px;
+    @extend %alienacion;
 }
 
 h1{
     text-align: center;
+    @extend %alienacion;
     font-size: 19px;
-    padding: 2px;
+    padding: 5px;
+}
+.H1boot{
+    font-weight: bolder;
 }
 
-.contenedor-transitar{
-    display:grid;
-    grid-template-columns: 1fr  1fr;
-    grid-template-rows: 50vh    10vh    50vh    15vh;
-    grid-template-areas: 
-    "header header"
-    "section    section"
-    "main   main"
-    "footer footer";
-}
+
 
 .form-select{
     @include tamaños(5px,200px); 
@@ -285,13 +296,6 @@ h1{
     }
 }
 
-header{
-        background-image: url(images/imagenheader.jpg);
-}
-footer{
-        background-image: url(images/imagenheader.jpg);
-}
-
 @media screen and (max-width: 500px){
     body {
         font-size: 11px;
@@ -300,7 +304,7 @@ footer{
     .contenedor-index{
         display:grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 30vh    10vh   90vh   90vh    20vh;
+        grid-template-rows: 30vh    15vh   180vh   180vh    20vh;
         grid-template-areas: 
         "header"
         "section"
@@ -312,7 +316,7 @@ footer{
     header{
         padding: 0px;
         background-repeat: repeat-x;
-        background-size:cover;
+        background-size:cover!important;
         img {
         text-align: center;
         justify-content: center;
@@ -324,7 +328,7 @@ footer{
         .li-nav {
         display:list-item;
         padding: 2px;
-    }
+        }
     } 
 
     .ingresar{
@@ -352,7 +356,7 @@ footer{
     }
 
     .mision-caja-chica {
-        padding: 2px;
+        padding: 10px;
         font-size: 8px;
         text-size-adjust:initial;
     } 
@@ -364,7 +368,7 @@ footer{
     .contenedor-mision{
         display:grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 30vh    10vh    20vh   20vh    22vh;
+        grid-template-rows: 30vh    10vh    25vh   25vh    22vh;
         grid-template-areas:
         "header"
         "section"
@@ -376,7 +380,7 @@ footer{
     .contenedor-adoptar{
         display:grid;
         grid-template-columns: 1fr  1fr;
-        grid-template-rows: 35vh    1vh    55vh    15vh;
+        grid-template-rows: 35vh    5vh    60vh    15vh;
         grid-template-areas: 
         "header header"
         "section    section"
@@ -387,7 +391,7 @@ footer{
     .contenedor-transitar{
         display:grid;
         grid-template-columns: 1fr  1fr;
-        grid-template-rows: 35vh    5vh    50vh    15vh;
+        grid-template-rows: 35vh    10vh    40vh    15vh;
         grid-template-areas: 
         "header header"
         "section    section"
@@ -418,14 +422,14 @@ footer{
 
 .contenedor-seccion2{
     display:grid;
-    grid-template-columns: 1fr  1fr;
-    grid-template-rows: 35vh    4vh    90vh    15vh;
+    grid-template-columns: 1fr;
+    grid-template-rows: 35vh    10vh    110vh    15vh;
     flex-wrap: wrap;
     grid-template-areas: 
-    "header header"
-    "section    section"
-    "main   main"
-    "footer footer";
+    "header"
+    "section"
+    "main"
+    "footer";
 }
 
 .sec2-caja-grande{
@@ -441,7 +445,7 @@ footer{
 .contenedor-publicar{
     display:grid;
     grid-template-columns: 1fr  1fr;
-    grid-template-rows: 50vh    5vh    100vh    30vh;
+    grid-template-rows: 35vh    10vh    65vh    15vh;
     flex-wrap: wrap;
     grid-template-areas: 
     "header header"
@@ -449,12 +453,6 @@ footer{
     "main   main"
     "footer footer";
 }
-}
-
-@media screen and (max-width: 900px){
-    -mision-caja-chica{
-        font-size: 100px;
-    }
 }
 
 @media screen and (min-width:800px) and (max-width: 3000px){
@@ -465,7 +463,7 @@ footer{
         .contenedor-mision{
             display:grid;
             grid-template-columns: 1fr 1fr;
-            grid-template-rows: 40vh    12vh    50vh    15vh;
+            grid-template-rows: 40vh    12vh    65vh    15vh;
             grid-template-areas:
             "header header"
             "section section"
@@ -476,7 +474,7 @@ footer{
         .contenedor-adoptar{
             display:grid;
             grid-template-columns: 1fr  1fr;
-            grid-template-rows: 40vh    12vh    100vh    15vh;
+            grid-template-rows: 40vh    12vh    130vh    15vh;
             grid-template-areas: 
             "header header"
             "section    section"
@@ -498,7 +496,7 @@ footer{
         .contenedor-transitar{
             display:grid;
             grid-template-columns: 1fr  1fr;
-            grid-template-rows: 40vh    12vh    55vh    15vh;
+            grid-template-rows: 40vh    12vh    52vh    15vh;
             grid-template-areas:
             "header header"
             "section    section"
@@ -509,7 +507,7 @@ footer{
         .contenedor-publicar{
             display:grid;
             grid-template-columns: 1fr  1fr;
-            grid-template-rows: 40vh    12vh    100vh    15vh;
+            grid-template-rows: 40vh    12vh    80vh    15vh;
             flex-wrap: wrap;
             grid-template-areas: 
             "header header"
@@ -521,7 +519,7 @@ footer{
         .contenedor-seccion2{
             display:grid;
             grid-template-columns: 1fr  1fr;
-            grid-template-rows: 40vh    5vh    60vh    15vh;
+            grid-template-rows: 40vh    10vh    65vh    15vh;
             flex-wrap: wrap;
             grid-template-areas: 
             "header header"
@@ -537,5 +535,5 @@ footer{
 
         .sec2-caja-grande{
             justify-content: center;
-        }
+        }   
     }
