--- a/scss/style.css
+++ b/scss/style.css
@@ -135,8 +135,8 @@ header a:hover {
 }
 
 header img {
-  height: 15%;
-  width: 15%;
+  height: 12%;
+  width: 12%;
   padding-top: 0px;
   padding-right: 30px;
   padding-left: 30px;
@@ -233,6 +233,7 @@ footer {
 
 .adoptar {
   font-size: 40px;
+  color: #370263;
   padding: 30px;
   text-align: center;
 }
@@ -519,8 +520,8 @@ h1 {
     display: grid;
     -ms-grid-columns: 1fr 1fr;
         grid-template-columns: 1fr 1fr;
-    -ms-grid-rows: 40vh    12vh    65vh    15vh;
-        grid-template-rows: 40vh    12vh    65vh    15vh;
+    -ms-grid-rows: 45vh    12vh    75vh    15vh;
+        grid-template-rows: 45vh    12vh    75vh    15vh;
         grid-template-areas: "header header" "section section" "main aside" "footer footer";
   }
   .contenedor-adoptar {
@@ -528,8 +529,8 @@ h1 {
     display: grid;
     -ms-grid-columns: 1fr  1fr;
         grid-template-columns: 1fr  1fr;
-    -ms-grid-rows: 40vh    12vh    130vh    15vh;
-        grid-template-rows: 40vh    12vh    130vh    15vh;
+    -ms-grid-rows: 45vh    12vh    130vh    15vh;
+        grid-template-rows: 45vh    12vh    130vh    15vh;
         grid-template-areas: "header header" "section    section" "main   main" "footer footer";
   }
   .contenedor-index {
@@ -537,8 +538,8 @@ h1 {
     display: grid;
     -ms-grid-columns: 1fr  1fr;
         grid-template-columns: 1fr  1fr;
-    -ms-grid-rows: 40vh    12vh    130vh    15vh;
-        grid-template-rows: 40vh    12vh    130vh    15vh;
+    -ms-grid-rows: 45vh    12vh    130vh    15vh;
+        grid-template-rows: 45vh    12vh    130vh    15vh;
         grid-template-areas: "header header" "section    section" "main   aside" "footer footer";
   }
   .contenedor-transitar {
@@ -546,8 +547,8 @@ h1 {
     display: grid;
     -ms-grid-columns: 1fr  1fr;
         grid-template-columns: 1fr  1fr;
-    -ms-grid-rows: 40vh    12vh    52vh    15vh;
-        grid-template-rows: 40vh    12vh    52vh    15vh;
+    -ms-grid-rows: 45vh    12vh    52vh    15vh;
+        grid-template-rows: 45vh    12vh    52vh    15vh;
         grid-template-areas: "header header" "section    section" "main   main" "footer footer";
   }
   .contenedor-publicar {
@@ -555,8 +556,8 @@ h1 {
     display: grid;
     -ms-grid-columns: 1fr  1fr;
         grid-template-columns: 1fr  1fr;
-    -ms-grid-rows: 40vh    12vh    80vh    15vh;
-        grid-template-rows: 40vh    12vh    80vh    15vh;
+    -ms-grid-rows: 45vh    12vh    80vh    15vh;
+        grid-template-rows: 45vh    12vh    80vh    15vh;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
         grid-template-areas: "header header" "section    section" "main   main" "footer footer";
@@ -566,8 +567,8 @@ h1 {
     display: grid;
     -ms-grid-columns: 1fr  1fr;
         grid-template-columns: 1fr  1fr;
-    -ms-grid-rows: 40vh    10vh    65vh    15vh;
-        grid-template-rows: 40vh    10vh    65vh    15vh;
+    -ms-grid-rows: 45vh    10vh    65vh    15vh;
+        grid-template-rows: 45vh    10vh    65vh    15vh;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
         grid-template-areas: "header header" "section    section" "main   main" "footer footer";
