--- a/scss/style.css
+++ b/scss/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap");
-.mision-caja-chica, section, main, .index-caja-chica, .adoptar img, h2, h1, .sec2-caja-grande, .fotos-caja-chica {
+.mision-caja-chica, section, main, .index-caja-chica, .adoptar img, h2, h1, .form-select, .sec2-caja-grande, .fotos-caja-chica {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -40,8 +40,8 @@ body {
   display: grid;
   -ms-grid-columns: 1fr  1fr;
       grid-template-columns: 1fr  1fr;
-  -ms-grid-rows: 50vh    12vh    100vh    15vh;
-      grid-template-rows: 50vh    12vh    100vh    15vh;
+  -ms-grid-rows: 50vh    12vh    135vh    15vh;
+      grid-template-rows: 50vh    12vh    135vh    15vh;
   background-color: #d479e9;
       grid-template-areas: "header header" "section    section" "main   aside" "footer footer";
 }
@@ -51,8 +51,8 @@ body {
   display: grid;
   -ms-grid-columns: 1fr  1fr;
       grid-template-columns: 1fr  1fr;
-  -ms-grid-rows: 50vh    12vh    70vh    15vh;
-      grid-template-rows: 50vh    12vh    70vh    15vh;
+  -ms-grid-rows: 50vh    12vh    80vh    15vh;
+      grid-template-rows: 50vh    12vh    80vh    15vh;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
       grid-template-areas: "header header" "section    section" "main   main" "footer footer";
@@ -85,8 +85,8 @@ body {
   display: grid;
   -ms-grid-columns: 1fr  1fr;
       grid-template-columns: 1fr  1fr;
-  -ms-grid-rows: 50vh    12vh    50vh    15vh;
-      grid-template-rows: 50vh    12vh    50vh    15vh;
+  -ms-grid-rows: 50vh    12vh    80vh    15vh;
+      grid-template-rows: 50vh    12vh    80vh    15vh;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
       grid-template-areas: "header header" "section    section" "main   main" "footer footer";
@@ -125,12 +125,14 @@ header a {
   -webkit-transition: all 1s;
   transition: all 1s;
   color: #370263;
+  background-color: #eaa9f8;
+  border-radius: 30%;
 }
 
 header a:hover {
   color: #2c0936;
   font-size: 20px;
-  background-color: #eaa9f8;
+  background-color: #827386;
   border-radius: 30%;
 }
 
@@ -200,13 +202,13 @@ aside {
           flex-direction: row;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  padding: 30px;
+  padding: 35px;
   font-size: 15px;
   text-align: justify;
 }
 
 .index-caja-chica img {
-  height: 30%;
+  height: 25%;
   width: 40%;
   padding: 10px;
   -webkit-transition: all 1s;
@@ -233,7 +235,6 @@ footer {
 
 .adoptar {
   font-size: 40px;
-  color: #370263;
   padding: 30px;
   text-align: center;
 }
@@ -280,10 +281,6 @@ footer {
   padding: 5px;
 }
 
-.espacio-formulario p {
-  padding: 5px;
-}
-
 h2 {
   padding: 10px;
   text-align: center;
@@ -302,7 +299,7 @@ h1 {
 }
 
 .form-select {
-  height: 5px;
+  height: 1px;
   width: 200px;
 }
 
@@ -360,8 +357,8 @@ h1 {
     display: grid;
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
-    -ms-grid-rows: 30vh    15vh   180vh   180vh    20vh;
-        grid-template-rows: 30vh    15vh   180vh   180vh    20vh;
+    -ms-grid-rows: 45vh    15vh   70vh   70vh    20vh;
+        grid-template-rows: 45vh    15vh   70vh   70vh    20vh;
         grid-template-areas: "header" "section" "main" "aside" "footer";
   }
   header {
@@ -376,8 +373,8 @@ h1 {
             justify-content: center;
     padding-top: 1px;
     padding-bottom: 1px;
-    width: 25%;
-    height: 25%;
+    width: 30%;
+    height: 30%;
   }
   header .li-nav {
     display: list-item;
@@ -400,12 +397,12 @@ h1 {
     font-size: 8px;
   }
   .index-caja-chica img {
-    height: 33%;
-    width: 33%;
+    height: 20%;
+    width: 40%;
     padding: 8px;
   }
   .mision-caja-chica {
-    padding: 10px;
+    padding: 15px;
     font-size: 8px;
     -webkit-text-size-adjust: initial;
        -moz-text-size-adjust: initial;
@@ -420,8 +417,8 @@ h1 {
     display: grid;
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
-    -ms-grid-rows: 30vh    10vh    25vh   25vh    22vh;
-        grid-template-rows: 30vh    10vh    25vh   25vh    22vh;
+    -ms-grid-rows: 45vh    10vh    40vh   40vh    22vh;
+        grid-template-rows: 45vh    10vh    40vh   40vh    22vh;
         grid-template-areas: "header" "section" "main" "aside" "footer";
   }
   .contenedor-adoptar {
@@ -429,8 +426,8 @@ h1 {
     display: grid;
     -ms-grid-columns: 1fr  1fr;
         grid-template-columns: 1fr  1fr;
-    -ms-grid-rows: 35vh    5vh    60vh    15vh;
-        grid-template-rows: 35vh    5vh    60vh    15vh;
+    -ms-grid-rows: 45vh    5vh    60vh    15vh;
+        grid-template-rows: 45vh    5vh    60vh    15vh;
         grid-template-areas: "header header" "section    section" "main   main" "footer footer";
   }
   .contenedor-transitar {
@@ -438,8 +435,8 @@ h1 {
     display: grid;
     -ms-grid-columns: 1fr  1fr;
         grid-template-columns: 1fr  1fr;
-    -ms-grid-rows: 35vh    10vh    40vh    15vh;
-        grid-template-rows: 35vh    10vh    40vh    15vh;
+    -ms-grid-rows: 45vh    10vh    40vh    15vh;
+        grid-template-rows: 45vh    10vh    40vh    15vh;
         grid-template-areas: "header header" "section    section" "main   main" "footer footer";
   }
   .fotos-caja-grande {
@@ -475,8 +472,8 @@ h1 {
     display: grid;
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
-    -ms-grid-rows: 35vh    10vh    110vh    15vh;
-        grid-template-rows: 35vh    10vh    110vh    15vh;
+    -ms-grid-rows: 45vh    10vh    145vh    15vh;
+        grid-template-rows: 45vh    10vh    145vh    15vh;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
         grid-template-areas: "header" "section" "main" "footer";
@@ -503,11 +500,22 @@ h1 {
     display: grid;
     -ms-grid-columns: 1fr  1fr;
         grid-template-columns: 1fr  1fr;
-    -ms-grid-rows: 35vh    10vh    65vh    15vh;
-        grid-template-rows: 35vh    10vh    65vh    15vh;
+    -ms-grid-rows: 45vh    10vh    85vh    15vh;
+        grid-template-rows: 45vh    10vh    85vh    15vh;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
         grid-template-areas: "header header" "section    section" "main   main" "footer footer";
+  }
+}
+
+@media screen and (min-width: 500px) and (max-width: 800px) {
+  header img {
+    height: 16%;
+    width: 16%;
+  }
+  .index-caja-chica {
+    height: 2%;
+    width: 25%;
   }
 }
 
@@ -529,8 +537,8 @@ h1 {
     display: grid;
     -ms-grid-columns: 1fr  1fr;
         grid-template-columns: 1fr  1fr;
-    -ms-grid-rows: 45vh    12vh    130vh    15vh;
-        grid-template-rows: 45vh    12vh    130vh    15vh;
+    -ms-grid-rows: 45vh    12vh    140vh    15vh;
+        grid-template-rows: 45vh    12vh    140vh    15vh;
         grid-template-areas: "header header" "section    section" "main   main" "footer footer";
   }
   .contenedor-index {
@@ -538,8 +546,8 @@ h1 {
     display: grid;
     -ms-grid-columns: 1fr  1fr;
         grid-template-columns: 1fr  1fr;
-    -ms-grid-rows: 45vh    12vh    130vh    15vh;
-        grid-template-rows: 45vh    12vh    130vh    15vh;
+    -ms-grid-rows: 45vh    12vh    145vh    15vh;
+        grid-template-rows: 45vh    12vh    145vh    15vh;
         grid-template-areas: "header header" "section    section" "main   aside" "footer footer";
   }
   .contenedor-transitar {
@@ -556,8 +564,8 @@ h1 {
     display: grid;
     -ms-grid-columns: 1fr  1fr;
         grid-template-columns: 1fr  1fr;
-    -ms-grid-rows: 45vh    12vh    80vh    15vh;
-        grid-template-rows: 45vh    12vh    80vh    15vh;
+    -ms-grid-rows: 45vh    12vh    95vh    15vh;
+        grid-template-rows: 45vh    12vh    95vh    15vh;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
         grid-template-areas: "header header" "section    section" "main   main" "footer footer";
@@ -567,8 +575,8 @@ h1 {
     display: grid;
     -ms-grid-columns: 1fr  1fr;
         grid-template-columns: 1fr  1fr;
-    -ms-grid-rows: 45vh    10vh    65vh    15vh;
-        grid-template-rows: 45vh    10vh    65vh    15vh;
+    -ms-grid-rows: 45vh    10vh    85vh    15vh;
+        grid-template-rows: 45vh    10vh    85vh    15vh;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
         grid-template-areas: "header header" "section    section" "main   main" "footer footer";
