--- a/scss/style.scss
+++ b/scss/style.scss
@@ -50,7 +50,7 @@ body {
 .contenedor-mision{
     display:grid;
     grid-template-columns: 1fr  1fr;
-    grid-template-rows: 50vh    12vh    100vh    15vh;
+    grid-template-rows: 50vh    12vh    135vh    15vh;
     background-color:$background-color-1;
     grid-template-areas: 
     "header header"
@@ -62,7 +62,7 @@ body {
 .contenedor-adoptar{
     display:grid;
     grid-template-columns: 1fr  1fr;
-    grid-template-rows: 50vh    12vh    70vh    15vh;
+    grid-template-rows: 50vh    12vh    80vh    15vh;
     flex-wrap: wrap;
     grid-template-areas: 
     "header header"
@@ -97,7 +97,7 @@ body {
 .contenedor-seccion2{
         display:grid;
         grid-template-columns: 1fr  1fr;
-        grid-template-rows: 50vh    12vh    50vh    15vh;
+        grid-template-rows: 50vh    12vh    80vh    15vh;
         flex-wrap: wrap;
         grid-template-areas: 
         "header header"
@@ -127,11 +127,13 @@ header{
     text-decoration: none;
     transition:all 1s;
     color:$font-color-1;
+    background-color: #eaa9f8;
+    border-radius: 30%;
     }   
         a:hover {
     color: $font-color-2;
     font-size: 20px;
-    background-color: #eaa9f8;
+    background-color: #827386;
     border-radius: 30%;
     }
         img {
@@ -151,7 +153,7 @@ header  .li-nav {
 }
 header  ul {
     list-style: none;
-    text-align: center;    
+    text-align:center;    
 } 
 
 .ingresar {
@@ -187,12 +189,12 @@ aside{
     display:inline;
     flex-direction:row;
     flex-wrap: wrap;
-    padding: 30px;
+    padding: 35px;
     font-size: 15px;
     text-align: justify;
     @extend %alienacion;
         img{
-    @include tamaños(30%,40%); 
+    @include tamaños(25%,40%); 
     padding: 10px;
     transition: all 1s;
 }
@@ -212,7 +214,6 @@ footer{
 
 .adoptar{
     font-size: 40px;
-    color: $font-color-1;
     padding: 30px;
     text-align: center;
         img{
@@ -236,10 +237,6 @@ footer{
     padding: map-get($cont-small, padding);
 }
 
-.espacio-formulario p{
-    padding: map-get($cont-small, padding);
-}
-
 h2{
     padding: 10px;
     text-align: center;
@@ -258,10 +255,9 @@ h1{
     font-weight: bolder;
 }
 
-
-
 .form-select{
-    @include tamaños(5px,200px); 
+    @include tamaños(1px,200px); 
+    @extend %alienacion;    
 }
 
 .fotos-caja-grande{
@@ -305,7 +301,7 @@ h1{
     .contenedor-index{
         display:grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 30vh    15vh   180vh   180vh    20vh;
+        grid-template-rows: 45vh    15vh   70vh   70vh    20vh;
         grid-template-areas: 
         "header"
         "section"
@@ -323,8 +319,8 @@ h1{
         justify-content: center;
         padding-top: 1px;
         padding-bottom: 1px;
-        width: 25%;
-        height: 25%;
+        width: 30%;
+        height: 30%;
         }
         .li-nav {
         display:list-item;
@@ -350,14 +346,14 @@ h1{
         padding-bottom: 10px;
         font-size: 8px;
         img{
-        height: 33%;
-        width: 33%;
+        height: 20%;
+        width: 40%;
         padding: 8px;
     }
     }
 
     .mision-caja-chica {
-        padding: 10px;
+        padding: 15px;
         font-size: 8px;
         text-size-adjust:initial;
     } 
@@ -369,7 +365,7 @@ h1{
     .contenedor-mision{
         display:grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 30vh    10vh    25vh   25vh    22vh;
+        grid-template-rows: 45vh    10vh    40vh   40vh    22vh;
         grid-template-areas:
         "header"
         "section"
@@ -381,7 +377,7 @@ h1{
     .contenedor-adoptar{
         display:grid;
         grid-template-columns: 1fr  1fr;
-        grid-template-rows: 35vh    5vh    60vh    15vh;
+        grid-template-rows: 45vh    5vh    60vh    15vh;
         grid-template-areas: 
         "header header"
         "section    section"
@@ -392,7 +388,7 @@ h1{
     .contenedor-transitar{
         display:grid;
         grid-template-columns: 1fr  1fr;
-        grid-template-rows: 35vh    10vh    40vh    15vh;
+        grid-template-rows: 45vh    10vh    40vh    15vh;
         grid-template-areas: 
         "header header"
         "section    section"
@@ -424,7 +420,7 @@ h1{
 .contenedor-seccion2{
     display:grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 35vh    10vh    110vh    15vh;
+    grid-template-rows: 45vh    10vh    145vh    15vh;
     flex-wrap: wrap;
     grid-template-areas: 
     "header"
@@ -446,7 +442,7 @@ h1{
 .contenedor-publicar{
     display:grid;
     grid-template-columns: 1fr  1fr;
-    grid-template-rows: 35vh    10vh    65vh    15vh;
+    grid-template-rows: 45vh    10vh    85vh    15vh;
     flex-wrap: wrap;
     grid-template-areas: 
     "header header"
@@ -454,6 +450,13 @@ h1{
     "main   main"
     "footer footer";
 }
+}
+@media screen and (min-width:500px) and (max-width: 800px){
+    header img {
+        @include tamaños(16%,16%);}
+    .index-caja-chica{
+        @include tamaños(2%,25%); 
+    }
 }
 
 @media screen and (min-width:800px) and (max-width: 3000px){
@@ -475,7 +478,7 @@ h1{
         .contenedor-adoptar{
             display:grid;
             grid-template-columns: 1fr  1fr;
-            grid-template-rows: 45vh    12vh    130vh    15vh;
+            grid-template-rows: 45vh    12vh    140vh    15vh;
             grid-template-areas: 
             "header header"
             "section    section"
@@ -486,7 +489,7 @@ h1{
         .contenedor-index{
             display:grid;
             grid-template-columns: 1fr  1fr;
-            grid-template-rows: 45vh    12vh    130vh    15vh;
+            grid-template-rows: 45vh    12vh    145vh    15vh;
             grid-template-areas: 
             "header header"
             "section    section"
@@ -508,7 +511,7 @@ h1{
         .contenedor-publicar{
             display:grid;
             grid-template-columns: 1fr  1fr;
-            grid-template-rows: 45vh    12vh    80vh    15vh;
+            grid-template-rows: 45vh    12vh    95vh    15vh;
             flex-wrap: wrap;
             grid-template-areas: 
             "header header"
@@ -520,7 +523,7 @@ h1{
         .contenedor-seccion2{
             display:grid;
             grid-template-columns: 1fr  1fr;
-            grid-template-rows: 45vh    10vh    65vh    15vh;
+            grid-template-rows: 45vh    10vh    85vh    15vh;
             flex-wrap: wrap;
             grid-template-areas: 
             "header header"
