--- a/scss/style.css
+++ b/scss/style.css
@@ -1,20 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap");
 .mision-caja-chica, section, main, .index-caja-chica, .adoptar img, h2, h1, .form-select, .sec2-caja-grande, .fotos-caja-chica {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
 }
 
 * {
   margin: 0%;
   padding: 0%;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -25,110 +19,63 @@ body {
 }
 
 .contenedor-index {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr  1fr;
-      grid-template-columns: 1fr  1fr;
-  -ms-grid-rows: 40vh    12vh    140vh    15vh;
-      grid-template-rows: 40vh    12vh    140vh    15vh;
+  grid-template-columns: 1fr  1fr;
+  grid-template-rows: 40vh    12vh    140vh    15vh;
   background-color: #d479e9;
-      grid-template-areas: "header header"
- "section    section"
- "main   aside"
- "footer footer";
+  grid-template-areas: "header header" "section    section" "main   aside" "footer footer";
 }
 
 .contenedor-mision {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr  1fr;
-      grid-template-columns: 1fr  1fr;
-  -ms-grid-rows: 40vh    12vh    50vh    15vh;
-      grid-template-rows: 40vh    12vh    50vh    15vh;
+  grid-template-columns: 1fr  1fr;
+  grid-template-rows: 40vh    12vh    50vh  15vh;
   background-color: #d479e9;
-      grid-template-areas: "header header"
- "section    section"
- "main   aside"
- "footer footer";
+  grid-template-areas: "header header" "section    section" "main   aside" "footer footer";
 }
 
 .contenedor-adoptar {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr  1fr;
-      grid-template-columns: 1fr  1fr;
-  -ms-grid-rows: 40vh    12vh    90vh    15vh;
-      grid-template-rows: 40vh    12vh    90vh    15vh;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-      grid-template-areas: "header header"
- "section    section"
- "main   main"
- "footer footer";
+  grid-template-columns: 1fr  1fr;
+  grid-template-rows: 40vh    12vh    90vh    15vh;
+  flex-wrap: wrap;
+  grid-template-areas: "header header" "section    section" "main   main" "footer footer";
 }
 
 .contenedor-transitar {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr  1fr;
-      grid-template-columns: 1fr  1fr;
-  -ms-grid-rows: 40vh    10vh    50vh    15vh;
-      grid-template-rows: 40vh    10vh    50vh    15vh;
-      grid-template-areas: "header header"
- "section    section"
- "main   main"
- "footer footer";
+  grid-template-columns: 1fr  1fr;
+  grid-template-rows: 40vh    10vh    50vh    15vh;
+  grid-template-areas: "header header" "section    section" "main   main" "footer footer";
 }
 
 .contenedor-publicar {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr  1fr;
-      grid-template-columns: 1fr  1fr;
-  -ms-grid-rows: 40vh    10vh    110vh    30vh;
-      grid-template-rows: 40vh    10vh    110vh    30vh;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-      grid-template-areas: "header header"
- "section    section"
- "main   main"
- "footer footer";
+  grid-template-columns: 1fr  1fr;
+  grid-template-rows: 40vh    10vh    110vh    30vh;
+  flex-wrap: wrap;
+  grid-template-areas: "header header" "section    section" "main   main" "footer footer";
 }
 
 .contenedor-seccion2 {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr  1fr;
-      grid-template-columns: 1fr  1fr;
-  -ms-grid-rows: 40vh    12vh    80vh    15vh;
-      grid-template-rows: 40vh    12vh    80vh    15vh;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-      grid-template-areas: "header header"
- "section    section"
- "main   main"
- "footer footer";
+  grid-template-columns: 1fr  1fr;
+  grid-template-rows: 40vh    12vh    80vh    15vh;
+  flex-wrap: wrap;
+  grid-template-areas: "header header" "section    section" "main   main" "footer footer";
 }
 
 .mision-caja-chica {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  padding: 20px;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 10px;
   font-size: 15px;
+  padding: 20px;
   text-align: justify;
 }
 
 header {
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
   grid-area: header;
   background-image: url(../images/imagenheader.jpg);
   background-size: contain !important;
@@ -139,11 +86,10 @@ header {
 header a {
   list-style: none;
   text-decoration: none;
-  -webkit-transition: all 1s;
   transition: all 1s;
   color: #370263;
   background-color: #eaa9f8;
-  border-radius: 30%;
+  border-radius: 10%;
 }
 
 header a:hover {
@@ -183,42 +129,28 @@ header ul {
 }
 
 section {
-  -ms-grid-row: 2;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
   grid-area: section;
   text-align: center;
   padding: 20px;
 }
 
 main {
-  -ms-grid-row: 3;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
   grid-area: main;
   text-align: center;
   padding: 10px;
 }
 
 aside {
-  -ms-grid-row: 3;
-  -ms-grid-column: 2;
   grid-area: aside;
   text-align: center;
   padding: 10px;
 }
 
 .index-caja-chica {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   display: inline;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-direction: row;
+  flex-wrap: wrap;
   padding: 35px;
   font-size: 15px;
   text-align: justify;
@@ -228,21 +160,16 @@ aside {
   height: 25%;
   width: 40%;
   padding: 10px;
-  -webkit-transition: all 1s;
   transition: all 1s;
 }
 
 .index-caja-chica img:hover {
   height: 35%;
   width: 45%;
-  -webkit-transform: rotatez(10deg);
-          transform: rotatez(10deg);
+  transform: rotatez(10deg);
 }
 
 footer {
-  -ms-grid-row: 4;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
   grid-area: footer;
   background-image: url(../images/imagenheader.jpg);
   background-size: contain;
@@ -260,26 +187,10 @@ footer {
   height: 20%;
   width: 30%;
   padding: 10px;
-  -webkit-animation-name: animacion1;
-          animation-name: animacion1;
-  -webkit-animation-duration: 5s;
-          animation-duration: 5s;
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-  -webkit-animation-delay: 1s;
-          animation-delay: 1s;
-}
-
-@-webkit-keyframes animacion1 {
-  0% {
-    width: 30%;
-  }
-  50% {
-    width: 35%;
-  }
-  100% {
-    width: 38%;
-  }
+  animation-name: animacion1;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+  animation-delay: 1s;
 }
 
 @keyframes animacion1 {
@@ -318,37 +229,24 @@ h1 {
 .form-select {
   height: 1px;
   width: 200px;
+  line-height: 1,5;
 }
 
 .fotos-caja-grande {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-line-pack: distribute;
-      align-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: row;
+  align-content: space-around;
+  align-items: center;
   padding: 5px;
   text-align: end;
   font-size: 8px;
 }
 
 .sec2-caja-grande {
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  flex-direction: row;
   display: flex;
   padding: 5px;
-  -ms-flex-line-pack: distribute;
-      align-content: space-around;
+  align-content: space-around;
   padding: 5px;
   text-align: start;
   font-size: 8px;
@@ -370,17 +268,10 @@ h1 {
     font-size: 11px;
   }
   .contenedor-index {
-    display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
-    -ms-grid-rows: 45vh    15vh   60vh   60vh    20vh;
-        grid-template-rows: 45vh    15vh   60vh   60vh    20vh;
-        grid-template-areas: "header"
- "section"
- "main"
- "aside"
- "footer";
+    grid-template-columns: 1fr;
+    grid-template-rows: 45vh    15vh   60vh   60vh   20vh;
+    grid-template-areas: "header" "section" "main" "aside" "footer";
   }
   header {
     padding: 0px;
@@ -388,10 +279,6 @@ h1 {
     background-size: cover !important;
   }
   header img {
-    text-align: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
     padding-top: 1px;
     padding-bottom: 1px;
     width: 30%;
@@ -402,7 +289,9 @@ h1 {
     padding: 2px;
   }
   .ingresar {
-    text-align: center;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
     padding-top: 10px;
     padding-right: 10px;
     padding-bottom: opx;
@@ -425,64 +314,34 @@ h1 {
   .mision-caja-chica {
     padding: 15px;
     font-size: 8px;
-    -webkit-text-size-adjust: initial;
-       -moz-text-size-adjust: initial;
-        -ms-text-size-adjust: initial;
-            text-size-adjust: initial;
+    text-size-adjust: initial;
   }
   footer {
     padding: 5px;
   }
   .contenedor-mision {
-    display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
-    -ms-grid-rows: 45vh    10vh    47vh   47vh    22vh;
-        grid-template-rows: 45vh    10vh    47vh   47vh    22vh;
-        grid-template-areas: "header"
- "section"
- "main"
- "aside"
- "footer";
+    grid-template-columns: 1fr;
+    grid-template-rows: 45vh    10vh    20vh   20vh  22vh;
+    grid-template-areas: "header" "section" "main" "aside" "footer";
   }
   .contenedor-adoptar {
-    display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 1fr  1fr;
-        grid-template-columns: 1fr  1fr;
-    -ms-grid-rows: 45vh    5vh    80vh    15vh;
-        grid-template-rows: 45vh    5vh    80vh    15vh;
-        grid-template-areas: "header header"
- "section    section"
- "main   main"
- "footer footer";
+    grid-template-columns: 1fr  1fr;
+    grid-template-rows: 45vh    5vh    80vh    15vh;
+    grid-template-areas: "header header" "section    section" "main   main" "footer footer";
   }
   .contenedor-transitar {
-    display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 1fr  1fr;
-        grid-template-columns: 1fr  1fr;
-    -ms-grid-rows: 45vh    10vh    45vh    15vh;
-        grid-template-rows: 45vh    10vh    45vh    15vh;
-        grid-template-areas: "header header"
- "section    section"
- "main   main"
- "footer footer";
+    grid-template-columns: 1fr  1fr;
+    grid-template-rows: 45vh    10vh    45vh    15vh;
+    grid-template-areas: "header header" "section    section" "main   main" "footer footer";
   }
   .fotos-caja-grande {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -ms-flex-line-pack: distribute;
-        align-content: space-around;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    flex-direction: row;
+    align-content: space-around;
+    align-items: center;
     padding: 5px;
     text-align: end;
     font-size: 8px;
@@ -491,57 +350,34 @@ h1 {
     height: 180px;
     width: 150px;
     padding: 5px;
-    -ms-flex-line-pack: distribute;
-        align-content: space-around;
+    align-content: space-around;
   }
   .fotos-caja-chica p {
     padding: 5px;
     text-align: right;
   }
   .contenedor-seccion2 {
-    display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
-    -ms-grid-rows: 45vh    10vh    160vh    15vh;
-        grid-template-rows: 45vh    10vh    160vh    15vh;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-        grid-template-areas: "header"
- "section"
- "main"
- "footer";
+    grid-template-columns: 1fr;
+    grid-template-rows: 45vh    10vh    160vh    15vh;
+    flex-wrap: wrap;
+    grid-template-areas: "header" "section" "main" "footer";
   }
   .sec2-caja-grande {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -ms-flex-line-pack: distribute;
-        align-content: space-around;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    flex-direction: column;
+    align-content: space-around;
+    align-items: center;
     padding: 5px;
     text-align: end;
     font-size: 8px;
   }
   .contenedor-publicar {
-    display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 1fr  1fr;
-        grid-template-columns: 1fr  1fr;
-    -ms-grid-rows: 45vh    10vh    90vh    15vh;
-        grid-template-rows: 45vh    10vh    90vh    15vh;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-        grid-template-areas: "header header"
- "section    section"
- "main   main"
- "footer footer";
+    grid-template-columns: 1fr  1fr;
+    grid-template-rows: 45vh    10vh    90vh    15vh;
+    flex-wrap: wrap;
+    grid-template-areas: "header header" "section    section" "main   main" "footer footer";
   }
 }
 
@@ -561,90 +397,49 @@ h1 {
     font-size: 20px;
   }
   .contenedor-mision {
-    display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
-    -ms-grid-rows: 45vh    12vh    50vh    15vh;
-        grid-template-rows: 45vh    12vh    50vh    15vh;
-        grid-template-areas: "header header"
- "section section"
- "main aside"
- "footer footer";
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 45vh    12vh    50vh   15vh;
+    grid-template-areas: "header header" "section section" "main aside" "footer footer";
   }
   .contenedor-adoptar {
-    display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 1fr  1fr;
-        grid-template-columns: 1fr  1fr;
-    -ms-grid-rows: 45vh    12vh    140vh    15vh;
-        grid-template-rows: 45vh    12vh    140vh    15vh;
-        grid-template-areas: "header header"
- "section    section"
- "main   main"
- "footer footer";
+    grid-template-columns: 1fr  1fr;
+    grid-template-rows: 45vh    12vh    140vh    15vh;
+    grid-template-areas: "header header" "section    section" "main   main" "footer footer";
   }
   .contenedor-index {
-    display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 1fr  1fr;
-        grid-template-columns: 1fr  1fr;
-    -ms-grid-rows: 45vh    12vh    145vh    15vh;
-        grid-template-rows: 45vh    12vh    145vh    15vh;
-        grid-template-areas: "header header"
- "section    section"
- "main   aside"
- "footer footer";
+    grid-template-columns: 1fr  1fr;
+    grid-template-rows: 45vh    12vh    145vh    15vh;
+    grid-template-areas: "header header" "section    section" "main   aside" "footer footer";
   }
   .contenedor-transitar {
-    display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 1fr  1fr;
-        grid-template-columns: 1fr  1fr;
-    -ms-grid-rows: 45vh    12vh    52vh    15vh;
-        grid-template-rows: 45vh    12vh    52vh    15vh;
-        grid-template-areas: "header header"
- "section    section"
- "main   main"
- "footer footer";
+    grid-template-columns: 1fr  1fr;
+    grid-template-rows: 45vh    12vh    52vh    15vh;
+    grid-template-areas: "header header" "section    section" "main   main" "footer footer";
   }
   .contenedor-publicar {
-    display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 1fr  1fr;
-        grid-template-columns: 1fr  1fr;
-    -ms-grid-rows: 45vh    12vh    110vh    15vh;
-        grid-template-rows: 45vh    12vh    110vh    15vh;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-        grid-template-areas: "header header"
- "section    section"
- "main   main"
- "footer footer";
+    grid-template-columns: 1fr  1fr;
+    grid-template-rows: 45vh    12vh    110vh    15vh;
+    flex-wrap: wrap;
+    grid-template-areas: "header header" "section    section" "main   main" "footer footer";
   }
   .contenedor-seccion2 {
-    display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 1fr  1fr;
-        grid-template-columns: 1fr  1fr;
-    -ms-grid-rows: 45vh    10vh    85vh    15vh;
-        grid-template-rows: 45vh    10vh    85vh    15vh;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-        grid-template-areas: "header header"
- "section    section"
- "main   main"
- "footer footer";
+    grid-template-columns: 1fr  1fr;
+    grid-template-rows: 45vh    10vh    85vh    15vh;
+    flex-wrap: wrap;
+    grid-template-areas: "header header" "section    section" "main   main" "footer footer";
   }
   .fotos-caja-chica img {
     width: 200px;
     height: 250px;
   }
   .sec2-caja-grande {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    justify-content: center;
   }
 }
 /*# sourceMappingURL=style.css.map */
-
